--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		
+		
+	
 				
 		<!-- AspectJ -->
 		<dependency>
@@ -115,7 +118,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>4.3.10.RELEASE</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
